# MiniSet

./: .gitignore  CMakeLists.txt  README.md  main.cpp
